project-01-kubernetes-web-app-deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
  namespace: demo-app
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
